Implement CollectibleBehaviorSoap and add soaplyeandbloom compatibility

--- a/BathTime/assets/bathtime/lang/en.json
+++ b/BathTime/assets/bathtime/lang/en.json
@@ -1,3 +1,4 @@
 {
-    "hello": "hello world!"
+    "soap-item-info": "Application time: {0}\nSoapy duration: {1}",
+    "heldhelp-soap": "Soap up!"
 }
